@@ -357,42 +357,75 @@ int RedisLink::send_resp(Buffer *output, const std::vector<std::string> &resp){
 	if(resp.empty()){
 		return 0;
 	}
-	if(resp[0] == "error" || resp[0] == "fail" || resp[0] == "client_error"){
-		output->append("-ERR ");
-		if(resp.size() >= 2){
-			output->append(resp[1]);
-		}
-		output->append("\r\n");
-		return 0;
-	}
-	if(resp[0] == "noauth"){
-		output->append("-NOAUTH ");
-		if(resp.size() >= 2){
-			output->append(resp[1]);
-		}
-		output->append("\r\n");
-		return 0;
-	}
-	if(resp[0] == "not_found"){
-		output->append("$-1\r\n");
-		return 0;
-	}
 	if(resp[0] != "ok"){
-		output->append("-ERR server error\r\n");
+		if(resp[0] == "error" || resp[0] == "fail" || resp[0] == "client_error"){
+			output->append("-ERR ");
+			if(resp.size() >= 2){
+				output->append(resp[1]);
+			}
+			output->append("\r\n");
+		}else if(resp[0] == "not_found"){
+			output->append("$-1\r\n");
+		}else if(resp[0] == "noauth"){
+			output->append("-NOAUTH ");
+			if(resp.size() >= 2){
+				output->append(resp[1]);
+			}
+			output->append("\r\n");
+		}else{
+			output->append("-ERR server error\r\n");
+		}
 		return 0;
 	}
 	
+	// not supported command
 	if(req_desc == NULL){
-		output->append("+OK\r\n");
+		{
+			char buf[32];
+			snprintf(buf, sizeof(buf), "*%d\r\n", (int)resp.size() - 1);
+			output->append(buf);
+		}
+		for(int i=1; i<resp.size(); i++){
+			const std::string &val = resp[i];
+			char buf[32];
+			snprintf(buf, sizeof(buf), "$%d\r\n", (int)val.size());
+			output->append(buf);
+			output->append(val.data(), val.size());
+			output->append("\r\n");
+		}
 		return 0;
 	}
+	
 	if(req_desc->strategy == STRATEGY_PING){
 		output->append("+PONG\r\n");
 		return 0;
 	}
-	
 	if(req_desc->reply_type == REPLY_STATUS){
 		output->append("+OK\r\n");
+		return 0;
+	}
+	if(req_desc->reply_type == REPLY_BULK){
+		if(resp.size() >= 2){
+			const std::string &val = resp[1];
+			char buf[32];
+			snprintf(buf, sizeof(buf), "$%d\r\n", (int)val.size());
+			output->append(buf);
+			output->append(val.data(), val.size());
+			output->append("\r\n");
+		}else{
+			output->append("$0\r\n");
+		}
+		return 0;
+	}
+	if(req_desc->reply_type == REPLY_INT){
+		if(resp.size() >= 2){
+			const std::string &val = resp[1];
+			output->append(":");
+			output->append(val.data(), val.size());
+			output->append("\r\n");
+		}else{
+			output->append("$0\r\n");
+		}
 		return 0;
 	}
 	if(req_desc->strategy == STRATEGY_MGET || req_desc->strategy == STRATEGY_HMGET){
@@ -441,31 +474,6 @@ int RedisLink::send_resp(Buffer *output, const std::vector<std::string> &resp){
 
 		return 0;
 	}
-	if(req_desc->reply_type == REPLY_BULK){
-		if(resp.size() >= 2){
-			const std::string &val = resp[1];
-			char buf[32];
-			snprintf(buf, sizeof(buf), "$%d\r\n", (int)val.size());
-			output->append(buf);
-			output->append(val.data(), val.size());
-			output->append("\r\n");
-		}else{
-			output->append("$0\r\n");
-		}
-		return 0;
-	}
-	
-	if(req_desc->reply_type == REPLY_INT){
-		if(resp.size() >= 2){
-			const std::string &val = resp[1];
-			output->append(":");
-			output->append(val.data(), val.size());
-			output->append("\r\n");
-		}else{
-			output->append("$0\r\n");
-		}
-		return 0;
-	}
 	
 	if(req_desc->reply_type == REPLY_MULTI_BULK){
 		bool withscores = true;
@@ -499,10 +507,10 @@ int RedisLink::send_resp(Buffer *output, const std::vector<std::string> &resp){
 				i += 1;
 			}
 		}
-	}else{
-		output->append("-ERR server error\r\n");
+		return 0;
 	}
 	
+	output->append("-ERR server error\r\n");
 	return 0;
 }
 
